GC use of deprecated junit assertThat and unify